[metadata]
name = SteganoBot
version = 1.0.0
description = A VK bot for hiding information in images
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/astronmax/SteganoBot

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.10

[options.packages.find]
where=src
